[package]
name = "ratatui-tree-widget"
description = "Tree Widget for ratatui"
version = "0.12.0"
license = "MIT"
repository = "https://github.com/hardliner66/ratatui-tree-widget"
authors = ["hardliner66 <hardliner66@gmail.com>"]
edition = "2021"
rust-version = "1.56.1"
keywords = ["tui", "terminal", "tree", "widget"]
categories = ["command-line-interface"]
include = ["src/**/*", "README.md"]

[dependencies]
ratatui = "0.21.0"
unicode-width = "0.1"

[dev-dependencies]
crossterm = "0.25"
tui = "0.19"
